# myCMDB

./: .flake8  LICENSE  README.md  pyproject.toml  requirements.txt
mycmdb/: __init__.py  __main__.py  cli.py  model.py
mycmdb/hosts/: models.py
tests/: test_cli.py  test_model.py
